test/libsolidity/syntaxTests/storageLayoutSpecifier/string.sol
contract C layout at "MyLayoutBase" {}
// ----
// UnimplementedFeatureError 1834: (0-38): Code generation is not supported for contracts with specified storage layout base.
